[workspace]
members = [
    "examples/jaka_dual",
    "examples/franka_letters",
    "franka-rust",
    "libaubo-rs",
    "libhans-rs",
    "libjaka-rs",
    "unitree-go2-rs",
    "roplat_exrobot",
    "roplat_rerun",
    "rsbullet/rsbullet",
    "rsbullet/rsbullet-core",
    "utils/rerun_urdf",
    "utils/topp",
    "utils/copp",
]
exclude = ["libhans_derive", "rsbullet_sys", "./robot_behavior"]
resolver = "3"

[patch.crates-io]
roplat = { path = "../roplat/roplat" }
robot_behavior = { path = "./robot_behavior" }
