[workspace]
members = [
    "examples/jaka_dual",
    "examples/jaka_roplat_multilang",
    # "examples/franka_letters",
    "franka-rust",
    "libaubo-rs",
    "libhans-rs",
    "libjaka-rs",
    "libk1",
    "unitree-go2-rs",
    "roplat_exrobot",
    "roplat_rerun",
    "rsbullet/rsbullet",
    "rsbullet/rsbullet-core",
    "utils/rerun_urdf",
    "./robot_behavior",
]
exclude = [
    "libhans_derive",
    "rsbullet_sys",
    # "./robot_behavior",
    "./robot_behavior_new",
    "utils/topp",
    "utils/copp",
]
resolver = "3"

[patch.crates-io]
roplat = { path = "../roplat/roplat" }
robot_behavior = { path = "./robot_behavior" }
