[package]
name = "jaka_dual"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
robot_behavior = "0.6.0"
libjaka = { path = "../../libjaka-rs" }
# libunitree = { path = "../../libunitree-rs" }
rsbullet = { path = "../../rsbullet/rsbullet" }
nalgebra = "0.34"
anyhow = "1.0.100"
roplat_rerun = { path = "../../roplat_rerun" }
serde_json = "1.0"
franka_rust = { path = "../../franka-rust" }
